--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -1,16 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    box-sizing:border-box ;
 }
 
 /******Header********/
 
 .header {
-    position: relative; /*tenia position: fixed*/
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
@@ -54,6 +49,8 @@ h1 {
 }
 
 /**********Nav***********/
+
+
 .menu{
     background-color: #5A189A;
     border-top: 5px solid #a93afd;
@@ -79,96 +76,138 @@ h1 {
     font-size: 1.5vw; 
 }
 
-/****Body*****/
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #e2bff9;
-    padding: 25px;
-    margin-top: auto;
-    margin-bottom: auto;
-}
 
-.container form{
-    width: 700px;
-    padding: 40px;
-    background: #fff;
-    border-radius: 10px;
-}
 
-form .fila{
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
-}
+/*************** body ***************/
 
-.fila .columna{
-    flex: 1 1 250px;
-}
 
-.columna .titulo{
-    font-size: 20px;
-    color: #333;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
 
-.columna .input-box{
-    margin: 15px 0;
-}
-
-.input-box span {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.input-box input{
-    width: 100%;
-    padding: 10px 15px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.columna .flex{
-    display: flex;
-    gap: 15px;
-}
-
-.flex .input-box{
-    margin-top: 5px;
-}
-
-.input-box img {
-    height: 34px;
-    margin-top: 5px;
-    filter: drop-shadow(0 0 1px #000);
-}
-
-form .boton{
-    width: 100%;
-    padding: 12px;
-    background: #8175d3;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    font-size: 17px;
+body{
+    font-family: 'Roboto', sans-serif;
+    background: #e2bff9 ;
     color: #fff;
-    margin-top: 5px;
+    padding: 0 1.5em;
+}
+
+.container{
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+.logo{
+    text-align: center;
+    font-size: 3em;
+}
+
+.contacto-agrupado{
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+}
+
+.contacto-agrupado >* {
+    padding: 1em;
+}
+
+.contacto-form{
+    background: #c77dff;
+}
+
+.contacto-form form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contacto-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contacto-form form p{
+    margin: 0;
+    padding: 1em;
+}
+
+
+.contacto-form form button,
+.contacto-form form input,
+.contacto-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: none;
+    color: #fff;
+    border-bottom: 1px solid #fff;
     cursor: pointer;
-    transition: .5s;
 }
 
-form .boton:hover{
-    background: #6a5acd;
+.contacto-form form button{
+    background: #240046;
+    color: #fff;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+    cursor: pointer;
 }
 
+.contacto-form form button:hover
+.contacto-form form button:focus {
+    background: #240046;
+    color: #fff;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+.contacto-info{
+    background: #240046;
+}
+
+.contacto-info h4,
+.contacto-info ul,
+.contacto-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.contacto-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.contacto-info ul li{
+    padding: .3em;
+}
+
+/*Pantallas grandes*/
 
 
-/*ESTLOS AL FOOTER*/
+@media (min-width: 700px) {
+    body {
+        padding: 0 4rem;
+    }
+
+
+    .contacto-agrupado {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    
+    .contacto-agrupado >* {
+        padding: 2em;
+    }
+    
+    .contacto-info h4,
+    .contacto-info ul,
+    .contacto-info p {
+        padding: 1em;
+        text-align: left;
+    }
+}
+
+/*********** ESTILOS AL FOOTER ***********/
+
+
+
 footer {
     background-color: #10002B;
     color: white;
@@ -177,6 +216,7 @@ footer {
     grid-template-rows: auto; /* Ajuste automático de altura */
     gap: 10px; /* Espacio entre elementos */
     padding: 10px; /* Espacio interno */
+    width: 100%;
 }
 footer #copyright{
     text-align: left; 
