--- a/static/css/cursos.css
+++ b/static/css/cursos.css
@@ -41,3 +41,15 @@ main{
 }
 
 /* Media queries para diseño responsivo */
+@media (max-width: 600px) {
+    @media (max-width: 600px) {
+
+    }
+    .grid-item img {
+        width: 100%; /* Ensure images fill the container */
+        height: auto; /* Maintain aspect ratio */
+    }
+    .grid-item .title {
+        font-size: 2vw; /* Increase font size for bigger text */
+    }
+} 
