--- a/static/css/nosotros.css
+++ b/static/css/nosotros.css
@@ -1,13 +1,10 @@
 /*Estilos Nosotros */
 
-.banner .btn {
-    font-size: 1.4vw;
-}
 .container-nos {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    height: 100vh;
+    height: 100%;
     background-image:url(../img/nosotros1.jpg); /* Ruta de la imagen de fondo */
     background-size: cover;
     background-position: center;   
@@ -33,3 +30,9 @@
     padding: 20px;
 }
 
+@media only screen and (max-width: 599px) {
+    .menu {
+        height: 30vh;
+
+    }
+}
