Adding select option for Contact and correcting links to home page on logo

--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -98,3 +98,20 @@
         text-align: left;
     }
 }
+.contacto-form form select {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: none;
+    color: #fff;
+    border-bottom: 1px solid #fff;
+    cursor: pointer;
+    background: #240046; /* Matches the button background */
+}
+
+.contacto-form form select:hover {
+    background: #8607a9; /* Matches the button hover background */
+    color: #fff;
+    transition: background-color 1s ease-out;
+}
